working on the advanced techniques page

--- a/html/playing/advanced-techniques.html
+++ b/html/playing/advanced-techniques.html
@@ -188,17 +188,41 @@
             </li>
           </ul>
           <h3 id="long_lasting_dried_bonito">Long-Lasting Dried Bonito</h3>
-          <p>Text</p>
+          <p>If you synthesize a Dried Bonito onto a Disposable Sword, the [Bite] command will be added to the Disposable Sword.<br>Selecting [Bite] restores 30% fullness at the cost of lowering weapon strength by 1,<br>and the weapon can no longer be bitten once its strength reaches 0.</p>
+          <p>So a Dried Bonito can be bitten 4 times (120%), and a Disposable Sword can be bitten 35 times (1050%).<br>You can also transfer a Disposable Sword-35 with the か seal onto a weapon with low attack like Pickaxe or Club,<br>and then synthesize that onto a new Disposable Sword to get another 30+ bites.</p>
+          <p>Lastly, Kaburasutegi+99 with the か seal can be bitten 198 times, making it the longest lasting food source in the game.</p>
           <h3 id="gamble_synthesis">Gamble Synthesis</h3>
-          <p>Text</p>
+          <p>If you find yourself running out of inventory space due to unidentified grasses but don't want to eat them in case<br>one of them is an ingredient for Healing Sword / 弟 seal for your shield, you could give gamble synthesis a try.</p>
+          <p>The idea is to attempt a Mixer synthesis using a spare weapon or shield such as Nagamaki or Tribal Shield<br>to see if key seals like 薬, 弟, or 命 get added to the equipment, preventing the first use of the grass going to waste.<br>Be sure to assign a name to the grass before throwing it, so that you can note what it was if the synthesis succeeds.</p>
+          <p>However, keep in mind that extra seals like ち or 幸 could get synthesized, resulting in a waste of a Strength Grass,<br>or possibly running out of synthesis slots when attempting to make a Healing Sword.</p>
+          <p>Whether a perosn uses this technique or not mostly comes down to play style.</p>
           <h3 id="checking_if_mixer_is_copycat_mask">Checking if a Mixer is a Copycat Mask</h3>
-          <p>Text</p>
+          <p>Mixergon overlaps with Trickster and Imposter Mask monsters between 50~80F inside the "Road to the End" dungeon,<br>so it's important to be able to determine if a Mixergon is real before throwing your equipment to avoid losing it.<br>(Mixer and Mixermon never overlaps with Copycat Mask family monsters).</p>
+          <p>The easiest method would be to shoot an arrow at the Mixergon. If it eats the arrow, it's real, and if it deals damage, it's fake.<br>The downside of this method is that it decreases the number of items the Mixergon can eat for synthesis to 3 items.</p>
+          <p>If you swing a Knowledge Staff and the description reads "Looks like Mixergon, but something isn't quite right.", it's fake.<br>It's one of the few practical uses for a Knowledge Staff, so if you happen to have one on hand, go ahead and use it for this.</p>
+          <p>Copycat Mask monsters have lower attack than Mixergon, so another way to tell would be to intentially get hit by an attack.<br>Mixergon has 48 attack before eating items, while Trickster Mask has 15 attack, and Imposter Mask has 20 attack.</p>
+          <p>Also, Copycat Mask monsters will always be generated awake (excluding Monster Houses),<br>so sleeping Mixergons are always real outside of Monster Houses.</p>
           <h3 id="synthesizing_silver_arrows_onto_equipment">Synthesizing Silver Arrows onto Equipment</h3>
-          <p>Text</p>
+          <p>Synthesizing a Silver Arrow onto a weapon or shield grants the 銀 seal,<br>which makes it so that the weapon or shield pierces through walls and objects when thrown.<br>The 銀 seal on a weapon also lets you hit monsters inside walls with regular attacks. (ex: Pumphantasm).</p>
+          <p>Mixer synthesis must be used since a Silver Arrow isn't a weapon or shield category item,<br>but due to its properties of piercing through objects, Mixers can't eat Silver Arrows.<br>However, possessed Mixers can eat items they step on, so you can synthesize this seal by using a Possession Staff.<br>Simply place the equipment and Silver Arrows on the ground, and step on them in the usual order.<br>Then either let another monster defeat the possessed Mixer, or return to your body and defeat the Mixer yourself.</p>
+          <p>Note that once a weapon or shield has the 銀 seal, all future Mixer synthesis will have to be done using this method.<br>The risk of losing the equipment due to an accidental throw is far greater than the advantage of hiting monsters inside walls,<br>so this synthesizing this seal onto a main weapon isn't recommended.</p>
           <h3 id="knowledge_related_to_ironheads_head">Knowledge Related to Ironhead's Head</h3>
-          <p>Text</p>
+          <p>Ironhead's Head cannot normally hit monsters as shown below, unless the 三 seal is synthesized.</p>
+          <pre class="diagram">
+            □□□□M　　S＝Shiren
+            □□□□□　　M＝Monster
+            □□□□□　　■＝Wall
+            ■S■■■
+          </pre>
+          <p>Ironhead's Head will pass through monsters that evade the attack and hit the monster behind them.<br>If monster 1 evades the attack, monster 2 will get hit. And if both 1 and 2 evade the attack, monster 3 will get hit.</p>
+          <pre class="diagram">
+            ■■■■
+            S123
+            ■■■■
+          </pre>
+          <p>Ironhead's Head cannot pierce through multiple targets like a Spear can, even if the 銀 seal is synthesized.<br>If the ケ seal (Kengo's Katana) is synthesized, the attack can only fling a weapon if the monster is adjacent to Shiren.<br>If the 三 seal (Razor Wind) is synthesized, the attack will change to 3-way pattern from where Shiren is currently standing.<br>(As opposed to a 3-way pattern beginning 3 tiles ahead).</p>
           <h3 id="thrown_equipment_damage">Thrown Equipment Damage</h3>
-          <p>Text</p>
+          <p>Thrown weapons deal damage based on the weapon's attack stat, Shiren's level, and Shiren's strength.<br>On the other hand, shields will always deal damage equal to the shield's defense stat. (1 damage minimum).<br>It's good to keep this in mind when hunting Cave Mamels early on inside the "Road to the End" dungeon.</p>
           <h2 id="bracelets">Bracelets</h2>
           <h3 id="using_scout_bracelet_to_determine_map_monsters">Using Scout Bracelet to Determine Map / Monsters</h3>
           <p>Text</p>
