working on the advanced techniques page

--- a/html/playing/advanced-techniques.html
+++ b/html/playing/advanced-techniques.html
@@ -225,7 +225,31 @@
           <p>Thrown weapons deal damage based on the weapon's attack stat, Shiren's level, and Shiren's strength.<br>On the other hand, shields will always deal damage equal to the shield's defense stat. (1 damage minimum).<br>It's good to keep this in mind when hunting Cave Mamels early on inside the "Road to the End" dungeon.</p>
           <h2 id="bracelets">Bracelets</h2>
           <h3 id="using_scout_bracelet_to_determine_map_monsters">Using Scout Bracelet to Determine Map / Monsters</h3>
-          <p>Text</p>
+          <p>Being attentive to the map when a Scout Bracelet is equipped helps lower the risk of ending up in a bad situation.</p>
+          <dl>
+            <dt>6~9 items in a group, 1~2 red dots that don't move.</dt>
+            <dd>Almost always a dungeon shop. The number of items for sale varies by the size of the shop.<br>It could also be an island with items.</dd>
+            <dt>Lots of items, no red dots nearby.</dt>
+            <dd>Island with items, or a treasure room.</dd>
+            <dt>Lots of monsters in a group, no movement.</dt>
+            <dd>Almost always a Monster House. Be extra careful if you see it's a Special Monster House when you walk near it.</dd>
+            <dt>Monster moving at half speed.</dt>
+            <dd>Likely a Snacky.</dd>
+            <dt>Monster moving at double speed.</dt>
+            <dd>Any monster in the current floor's monster table that has the ability to move at double speed.<br>If it moves toward an item and the blue dot vanishes, it's likely a Water Strider.</dd>
+            <dt>Monster moving in a random / unpredictable pattern.</dt>
+            <dd>Pumphantasm family monster.</dd>
+            <dt>Red dot turned into a blue dot on the next turn.</dt>
+            <dd>N'dubba was generated.</dd>
+            <dt>Monster that moved to an item and then stopped.</dt>
+            <dd>Bored Kappa or Gamarra family monster.</dd>
+            <dt>Monster that runs away from Shiren.</dt>
+            <dd>Mr. Drone family, Gamarra or Zalokleft family after stealing from Shiren, or Spearfish / Ocran family monster with low HP.</dd>
+            <dt>Red dot that moves from one item to the next.</dt>
+            <dd>Trader NPC.</dd>
+            <dt>Moving toward Shiren at triple speed, passing through walls.</dt>
+            <dd>Typhoon.</dd>
+          </dl>
           <h3 id="how_to_use_pierce_bracelet">How to Use Pierce Bracelet</h3>
           <p>Text</p>
           <h3 id="how_to_use_phantasm_bracelet">How to Use Phantasm Bracelet</h3>
