working on the advanced techniques page

--- a/html/playing/advanced-techniques.html
+++ b/html/playing/advanced-techniques.html
@@ -251,20 +251,100 @@
             <dd>Typhoon.</dd>
           </dl>
           <h3 id="how_to_use_pierce_bracelet">How to Use Pierce Bracelet</h3>
-          <p>Text</p>
+          <p>Famous for causing accidents like throwing equipment at a Mixer or throwing pots while it's equipped.<br>It might be tempting to write it off as a negative effect item after such experiences, but it can actually be very useful.</p>
+          <dl>
+            <dt>Attack monsters inside walls.</dt>
+            <dd>Projectiles and thrown items will pierce through walls, letting you hit monsters inside walls.<br>Nice to keep in mind for when you're ambushed by Typhoon.</dd>
+            <dt>Throw items into Monster Houses.</dt>
+            <dd>Shoot arrows or throw grass items to clear out a Monster House before you enter it.<br>Easier if you have a Scout Bracelet.</dd>
+            <dt>Snipe monsters from across the map.</dt>
+            <dd>As long as you're lined up with the red dots on the map, arrows will hit enemies no matter how far they are from you.<br>Requires Scout Bracelet.</dd>
+            <dt>Lure enemies into a hallway and hit all of them at once.</dt>
+            <dd>Good technique if you're surrounded. Escape into a hallway using items like Swap Staff,<br>and then shoot arrows or throw items at the line of monsters that follow you into the hallway.<br>You can also throw Happy Grass to level up multiple enemies at the same time,<br>or throw a Balance Staff to make multiple monsters trip and drop an item, etc.</dd>
+            <dt>Power up allies in a single turn.</dt>
+            <dd>Have allies form a line by entering a hallway, and then throw items that power them up. (ex: Strength Grass, Happy Grass)</dd>
+            <dt>Move two Shopkeepers at the same time.</dt>
+            <dd>For example, say you found a shop and read a Wall Collapse Scroll, and 2 Shopkeepers are near the stairs.<br>You'd typically swing a Swap Staff or something to steal, but what if you only have 1 Warp Grass on hand?<br>Simply position yourself so that the Warp Grass will hit both Shopkeepers when thrown while the Pierce Bracelet is equipped.</dd>
+            <dt>Throw a Swap Staff from inside a shop to steal.</dt>
+            <dd>For example, you might be able to position monsters like Bored Kappa, Gamarra, or Patient Bag to stay still near the stairs.<br>Then you can steal easily by throwing a Swap Staff at the monster from inside a shop while the Pierce Bracelet is equipped.<br>This method to steal can be done using any monster if you have a Scout Bracelet.</dd>
+          </dl>
           <h3 id="how_to_use_phantasm_bracelet">How to Use Phantasm Bracelet</h3>
-          <p>Text</p>
+          <p>There's more to Phantasm Bracelet than simply being able to move inside walls.</p>
+          <dl>
+            <dt>Save on fullness by taking shortcuts.</dt>
+            <dd>If a room is right on the other side of a wall, it's often better to walk through the wall instead of taking the long way around.<br>That way you'll save on turns, meaning less fullness is depleted and fewer new monsters will be generated.</dd>
+            <dt>Use with Scout Bracelet to avoid damage.</dt>
+            <dd>Step into a wall when you see a monster approaching to avoid getting hit by their attacks.<br>Scout Bracelet also plays well with Phantasm Bracelet when you simply want to collect items and hurry to the next floor.</dd>
+            <dt>Attack monsters inside walls.</dt>
+            <dd>Having a Phantasm Bracelet equipped allows you to attack monsters that are inside walls. (ex: Pumphantasm, Typhoon)</dd>
+            <dt>Cut corners in hallways and attack through corners.</dt>
+            <dd></dd>
+          </dl>
+          <pre class="diagram">
+            S:Shiren　M:Monster　□:Wall
+            □□□
+            □ S
+            □M□
+          </pre>
+          <p>Normally, your attacks wouldn't be able to hit enemies in the above position.<br>However, if you have a Phantasm Bracelet equipped, your attacks will go through corners, letting you get the first hit.<br>This is similar to having a Razor Wind or weapon with the 三 seal equipped.</p>
+          <p>Also, with a Phantasm Bracelet equipped, you can save 1 turn by stepping through corners.</p>
+          <pre class="diagram">
+            □□□□□
+            □&nbsp;&nbsp;&nbsp;□
+            &nbsp;&nbsp;□&nbsp;□
+            □&nbsp;&nbsp;&nbsp;□
+            □□□□□
+          </pre>
+          <p>If you dig this type of pattern, you'll be able to defeat most monsters without taking damage using diagonal movement.</p>
+          <dl>
+            <dt>Warp by unequipping over water / inside walls.</dt>
+            <dd>Shiren will warp to a random location on the current floor if the Phantasm Bracelet is unequipped over water or while inside walls.<br>Particularly effective when you need a quick escape from Typhoon.</dd>
+            <dt>Clear out monsters before entering a Monster House.</dt>
+            <dd>Pick off as many monsters along the wall as you can before entering a Monster House.<br>You'll want seals like 回 (Healing Sword) and 弟 (Otogiriso) on your weapon when you do this to restore HP.<br>Ironhead's Head in particular has the potential to clear the entire room.</dd>
+          </dl>
           <h3 id="how_to_use_bend_bracelet">How to Use Bend Bracelet</h3>
-          <p>Text</p>
+          <p>Thrown objects will curve to the right when they hit a wall when you have a Bend Bracelet equipped.<br>If the tile to the right is a wall, it will curve to the left, but it will then curve to the right if it hits a wall on the left.<br>Once you understand how it works, it should be easier to make use of it.</p>
+          <pre class="diagram">
+            S: Shiren
+            □□□□□
+            □&nbsp;&nbsp;┌→
+            S┐□│□
+            □└─┘□
+            □□□□□
+          </pre>
+          <dl>
+            <dt>Hit yourself with an item.</dt>
+            <dd>For example, this can be done to get one last use out of a Strength Gainer[0].<br>Easy to do in small rooms or partial hallways. Shiren can hit himself with an item by throwing it to the right, as shown below.</dd>
+          </dl>
+          <pre class="diagram">
+            □□□□
+            &nbsp;S┐□
+            □↑│□
+            □└┘□
+            □ □□
+          </pre>
+          <dl>
+            <dt>Hit Tonosamadon with an item.</dt>
+            <dd>Either a Reflect Shield or another Tonosamadon is needed to do this, with the end result of the above Tonosamadon being hit.<br>This works because a reflected object cannot be reflected again.</dd>
+          </dl>
+          <pre class="diagram">
+            □T□
+            □ □
+            S┐□
+            □↓□
+            □T□
+          </pre>
           <h2 id="scrolls">Scrolls</h2>
           <h3 id="reusable_sanctuary_scroll_blank_water">Reusable Sanctuary Scroll (Blank Scroll + Water Pot)</h3>
-          <p>Text</p>
+          <p>Blank scrolls that are stuck to the ground (ex: Blank:Sanctuary) can be picked up if they are turned into a Wet Scroll.<br>They'll dry off when you advance to the next floor, so you can use the same scroll once per floor if you have a Water Pot.</p>
+          <p>However, this does break the balance of the game, so it's strongly recommended to limit its use.<br>Note that a real Sanctuary (Sanctaruy) scroll cannot be picked up even if they are turned into a Wet Scroll.</p>
           <h3 id="reusable_sanctuary_scroll_non_blank">Reusable Sanctuary Scroll (Non-Blank Scroll)</h3>
-          <p>Text</p>
+          <p>Bored Kappa monsters and Water Strider can pick up scrolls that are stuck to the ground.<br>The sticking effect will be canceled if the scroll is wet, allowing you to reuse a real Sanctuary Scroll.<br>Bored Kappa monsters occasionally throw the item into a pot you're carrying, but it's not guaranteed.<br>But with Water Striders, all you have to do is defeat it before it throws the item.<br>Ally Water Striders will drop the item when they return to their pot.<br>Possession Staff also makes it easy to perform this technique.</p>
+          <p>Alternatives to using a Water Pot to transform the scroll into a Wet Scroll include stepping on a Flood Trap,<br>dropping the scroll into a waterway, and getting hit by Shotfish's special attack.</p>
           <h3 id="identify_scrolls_using_blank_scrolls_water">Identify Scrolls Using Blank Scrolls and Water</h3>
-          <p>Text</p>
+          <p>If you write the name of a scroll that hasn't been identified yet and then turn the Blank Scroll into a Wet Scroll,<br>the Wet Scroll will turn back into a plain Blank Scroll on the next floor, and the scroll name you entered will be identified.</p>
           <h3 id="free_blank_scrolls_from_shops">Free Blank Scrolls from Shops</h3>
-          <p>Text</p>
+          <p>If you find a Blank Scroll in a shop, simply write something on it and then turn it into a Wet Scroll.<br>For some reason the Shopkeeper won't charge Gitan for it, and you can walk out with it for free.<br>This can also be done by throwing the Blank Scroll into a waterway from inside the shop.</p>
           <h3 id="obtaining_underwater_items_using_sanctaruy_scroll">Obtaining Underwater Items Using Sanctaruy Scroll</h3>
           <p>Text</p>
           <h3 id="sanctuary_scrolls_inside_napus_storage">Sanctuary Scrolls inside Napus Storage</h3>
