working on the advanced techniques page

--- a/html/playing/advanced-techniques.html
+++ b/html/playing/advanced-techniques.html
@@ -63,8 +63,8 @@
             <li><a href="#staves">Staves</a>
               <ul>
                 <li><a href="#wall_reflection">Wall Reflection</a></li>
-                <li><a href="#hit_tonosamadon_manager_using_wall_reflection">Hit Tonosamadon or Manager Using Wall Reflection</a></li>
-                <li><a href="#hit_taishodon_using_wall_reflection">Hit Taishodon with Staff Magic Using Wall Reflection</a></li>
+                <li><a href="#hit_tonosamadon_manager_using_wall_reflection">Hit Tonosamadon or Manager with an Object Using Wall Reflection</a></li>
+                <li><a href="#hit_taishodon_using_wall_reflection">Hit Taishodon or Asst. Manager with Staff Magic Using Wall Reflection</a></li>
                 <li><a href="#avoid_escargon_using_wall_reflection">Avoid Escargon's Ability Using Wall Reflection</a></li>
                 <li><a href="#using_grass_gainer_grass_tosser_staves">Using Grass Gainer or Grass Tosser Staves</a></li>
                 <li><a href="#stop_fast_monsters_using_fire_staff">Stop Monsters with Fast Movement Using Fire Staff</a></li>
@@ -346,24 +346,94 @@
           <h3 id="free_blank_scrolls_from_shops">Free Blank Scrolls from Shops</h3>
           <p>If you find a Blank Scroll in a shop, simply write something on it and then turn it into a Wet Scroll.<br>For some reason the Shopkeeper won't charge Gitan for it, and you can walk out with it for free.<br>This can also be done by throwing the Blank Scroll into a waterway from inside the shop.</p>
           <h3 id="obtaining_underwater_items_using_sanctaruy_scroll">Obtaining Underwater Items Using Sanctaruy Scroll</h3>
-          <p>Text</p>
+          <p>If an important item falls in water, you could try to recover it by placing a Sanctaruy Scroll on the ground.<br>The item will begin to hop around, and it may eventually hop back onto dry ground.</p>
+          <p>It's a technique that can come in handy if you don't have an Evaporate Scroll or Freeze Scroll on hand.<br>Or if you have a Blank Scroll and Water Pot, and don't want to waste it by writing Blank:Evaporate or Blank:Freeze.</p>
           <h3 id="sanctuary_scrolls_inside_napus_storage">Sanctuary Scrolls inside Napus Storage</h3>
-          <p>Text</p>
-          <h3 id="taking_sanctuary_scrolls_from_pots">Taking Sanctuary Scrolls from Pots</h3>
-          <p>Text</p>
+          <p>Scrolls that are stuck to the ground inside the storage will return to their rolled up state when you exit and re-enter,<br>so you can place Sanctuary Scrolls down to keep an ally Mixer in place when synthesizing inside the storage.</p>
+          <h3 id="taking_sanctuary_scrolls_from_pots">Obtaining Sanctuary Scrolls from Pots</h3>
+          <p>If it's not in a Storage Pot, you'll need to shatter the pot in a way where the Sanctuary Scroll falls into water,<br>and then read an Evaporate, Freeze, or Wall Collapse scroll to pick it up as a Wet Scroll.</p>
+          <p>Alternatively, you can wait until you're back in Napus Village, and then shatter the pot inside the storage and re-enter.</p>
           <h3 id="extinction_scroll_information">Extinction Scroll Information</h3>
-          <p>Text</p>
+          <ul>
+            <li>Monsters that have been sealed can still be generated inside Special Monster Houses.</li>
+            <li>Both ally and enemy versions of the monster will be sealed when an Extinction Scroll hits a monster.<br>For example, if you have an ally Monsoon Doll with you, and then throw an Extinction Scroll at an enemy Monsoon Doll,<br>both the ally Monsoon Doll and enemy Monsoon Doll will vanish from the dungeon at the same time.<br>That might sound bad, but it can be used to seal an ally Archdragon to eliminate having to find a real one as an enemy, etc.</li>
+            <li>Throwing an Extinction Scroll at Shopkeepers, Traders, or Shuten Children will only make them vanish from the current floor.<br>On the other hand, Guard Dogs and Seriffs will be sealed in the same manner as other monsters.</li>
+          </ul>
           <h3 id="plating_scroll_to_conver_iron_arrows_to_silver_arrows">Plating Scroll to Convert Iron Arrows to Silver Arrows</h3>
-          <p>Text</p>
+          <p>If you select a stack of Iron Arrows when reading a Plating Scroll, the number of arrows will be halved<br>and they will be transformed into Silver Arrows. (This is exclusive to Shiren 2).</p>
           <h2 id="staves">Staves</h2>
           <h3 id="wall_reflection">Wall Reflection</h3>
-          <p>Text</p>
-          <h3 id="hit_tonosamadon_manager_using_wall_reflection">Hit Tonosamadon or Manager Using Wall Reflection</h3>
-          <p>Text</p>
-          <h3 id="hit_taishodon_using_wall_reflection">Hit Taishodon with Staff Magic Using Wall Reflection</h3>
+          <p>Staff magic can reflect off of a wall 1 time in Shiren 2. (and in Asuka Kenzan).</p>
+          <pre class="diagram">
+            S:Shiren
+            ■■■■■■■■■■■■■■■
+            ■□□□□/\□□□□□□□□
+            ■□□□/□□\□□□□□□□
+            ■□□/□□□□\□□□□□□
+            ■□S□□□□□□\□□□□□
+            ■□□□□□□□□□\□□□□
+          </pre>
+          <p>If the magic hits a corner, it will be reflect either to the left or right at random.</p>
+          <pre class="diagram">
+            □□□□□
+            □□□□/
+            □□■/□
+            □□/\□
+            □/□□S
+          </pre>
+          <pre class="diagram">
+            □□□□□
+            \□□□□
+            □\■□□
+            □/\□□
+            S□□\□
+          </pre>
+          <pre class="diagram">
+            S□□/□
+            □\/□□
+            □/■□□
+            /□□□□
+            □□□□□
+          </pre>
+          <pre class="diagram">
+            □\□□S
+            □□\/□
+            □□■\□
+            □□□□\
+            □□□□□
+          </pre>
+          <p>Master this technique and you'll be able to escape Monster Houses using a Swap Staff even if a monster isn't lined up, etc.</p>
+          <h3 id="hit_tonosamadon_manager_using_wall_reflection">Hit Tonosamadon or Manager with an Object Using Wall Reflection</h3>
+          <p>Necessary things include a Knockback Staff and a second Tonosamadon.<br>Easiest if you have an item that prevents them from moving, such as a Slumber Scroll.<br>Position the Tonosamadons as shown below, and swing the Knockback Staff.</p>
+          <pre class="diagram">
+            T□□□□
+            □□□□□　S:Shiren
+            □□O■□　O:Object 
+            □□/□□　T:Tonosamadon
+            □/□□T
+            S□□□□
+          </pre>
+          <p>The object will fly toward the top left Tonosamadon, which will reflect the object toward the bottom right Tonosamadon.<br>A reflected object cannot be reflected again, so the object hits the second Tonosamadon.</p>
+          <h3 id="hit_taishodon_using_wall_reflection">Hit Taishodon or Asst. Manager with Staff Magic Using Wall Reflection</h3>
+          <p>Necessary things include a second Taishodon (or an Escargon).<br>Easiest if you have an item that prevents them from moving, such as a Slumber Scroll.<br>Position the Taishodons as shown below, and swing any staff.</p>
+          <pre class="diagram">
+            T□□□□
+            □\□□□　S:Shiren  
+            □□\■□　T:Taishodon
+            □□/□□
+            □/□□T
+            S□□□□
+          </pre>
           <p>Text</p>
           <h3 id="avoid_escargon_using_wall_reflection">Avoid Escargon's Ability Using Wall Reflection</h3>
           <p>Text</p>
+          <pre class="diagram">
+            ■□■
+            ■M■
+            ■\■■■　S:Shiren
+            ■□\□■　M:Monster
+            ■■■S■
+          </pre>
           <h3 id="using_grass_gainer_grass_tosser_staves">Using Grass Gainer or Grass Tosser Staves</h3>
           <p>Text</p>
           <h3 id="stop_fast_monsters_using_fire_staff">Stop Monsters with Fast Movement Using Fire Staff</h3>
